align fixed

--- a/css/style.css
+++ b/css/style.css
@@ -125,12 +125,12 @@ body,html{margin: 0;padding: 0;}
 
   .stay-in-touch-outer{
     background-color: rgb(231, 229, 229);
-    height: 70vh;
+    width: 90%;
     align-items: center;
     text-align: center;
     font-weight: bold;
 
-    padding: 10% 0% 0% 0%;
+    padding: 5% 0% 5% 0%;
   }
 
   .stay-in-touch-outer h1{
